struct.c
@@ -13,8 +13,8 @@
 #include "vm_core.h"
 #include "method.h"
 
-VALUE rb_method_for_self_aref(VALUE name, VALUE arg);
-VALUE rb_method_for_self_aset(VALUE name, VALUE arg);
+VALUE rb_method_for_self_aref(VALUE name, VALUE arg, rb_insn_func_t func);
+VALUE rb_method_for_self_aset(VALUE name, VALUE arg, rb_insn_func_t func);
 
 VALUE rb_cStruct;
 static ID id_members;
@@ -175,7 +175,8 @@ new_struct(VALUE name, VALUE super)
 static void
 define_aref_method(VALUE nstr, VALUE name, VALUE off)
 {
-    VALUE iseqval = rb_method_for_self_aref(name, off);
+    rb_control_frame_t *FUNC_FASTCALL(rb_vm_opt_struct_aref)(rb_thread_t *, rb_control_frame_t *);
+    VALUE iseqval = rb_method_for_self_aref(name, off, rb_vm_opt_struct_aref);
     rb_iseq_t *iseq = DATA_PTR(iseqval);
 
     rb_add_method(nstr, SYM2ID(name), VM_METHOD_TYPE_ISEQ, iseq, NOEX_PUBLIC);
@@ -185,7 +186,8 @@ define_aref_method(VALUE nstr, VALUE name, VALUE off)
 static void
 define_aset_method(VALUE nstr, VALUE name, VALUE off)
 {
-    VALUE iseqval = rb_method_for_self_aset(name, off);
+    rb_control_frame_t *FUNC_FASTCALL(rb_vm_opt_struct_aset)(rb_thread_t *, rb_control_frame_t *);
+    VALUE iseqval = rb_method_for_self_aset(name, off, rb_vm_opt_struct_aset);
     rb_iseq_t *iseq = DATA_PTR(iseqval);
 
     rb_add_method(nstr, SYM2ID(name), VM_METHOD_TYPE_ISEQ, iseq, NOEX_PUBLIC);
